fix: forgot to uncomment invisible display buttons

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ button {
 }
 
 .display-buttons {
-  /* visibility: hidden; */
+  visibility: hidden;
   align-items: center;
   display: flex;
 }
